[package]
name = "learn_opengl"
version = "0.1.0"
authors = ["J.D. <jdk9162@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glfw = "0.42.0"
image = "0.23.14"
nalgebra = "0.29.0" 
nalgebra-glm = "0.15.0"
freetype-rs = "0.28.0"
rodio = "0.14.0"
rusty_audio = "1.2.1"
memoffset = "0.6"
tobj = "3.0.1"
serde_json =  "1.0.64"
once_cell = "1.8.0"